# eagle-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXTENSION_DEBUG_REPORT.md  FUNCTIONAL_ARCHITECTURE.md  HANDOVER_DOCUMENT.md  HANDOVER_STATUS.md  LICENSE  README.jp.md  README.md  SECURITY.md  config.py  config.template.json  debug_eagle_api.py  debug_final_analysis.py  debug_folder_rename.py  debug_item_extension.py  debug_mcp_client.py  debug_summary.py  debug_thumbnail_path.py  eagle_client.py  main.py  pyproject.toml  run.bat  test_v3.py
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: EAGLE_API_SPEC.md  SETUP.md  SYSTEM_PROMPT.jp.md  SYSTEM_PROMPT.md  SYSTEM_PROMPT_CONCISE.md  TROUBLESHOOTING.md
handlers/: __init__.py  base.py  direct_api.py  folder.py  image.py  item.py  library.py
schemas/: __init__.py  base.py
scripts/: setup_local.bat  setup_local.sh
tests/: __init__.py  test_eagle_client.py
utils/: __init__.py  encoding.py
